fix: make app content wrapper fill the entire page when sidebar is collapsed

--- a/src/layout/AppLayout/AppLayout.css
+++ b/src/layout/AppLayout/AppLayout.css
@@ -3,9 +3,8 @@
 }
 
 .page-content {
-  /* TODO: Replace the hardcoded 90px width for the left sidebar with a dynamic calculation
-           Reference: SideBar.js  
-   */
-  width: calc(100% - 250px);
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 0;
   height: 100vh;
 }
